--- a/book.html
+++ b/book.html
@@ -24,23 +24,49 @@
       height: 400px;
     }
   </style>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWfu-lO-y3oA2wKN-3-677DEmCStsUipU"></script>
   <script>
+    let map;
+
+    const iconBase = "/assets/img/";
+    const icons = {
+      poi: {
+        icon: "https://developers.google.com/maps/documentation/javascript/examples/full/images/info-i_maps.png"
+      }
+    }
+    const features = [
+      {
+        position: new google.maps.LatLng(51.0478498, -114.0702133),
+        type: "poi"
+      }
+    ]
+    //create markers
+    for (let i = 0; i < features.length; i++) {
+      const marker = new google.maps.Marker({
+        position: features[i].position,
+        icon: icons[features[i].type].icon,
+        map: map,
+      });
+    }
+
+
     function initialize() {
       var mapCanvas = document.getElementById("map");
       //51.0489141,-114.0680675
-      var myLatLng = { lat: 51.0489141, lng: -114.0680675 };
+      var myLatLng = { lat: 51.0548432, lng: -114.0701675 };
       var mapOptions = {
         center: new google.maps.LatLng(myLatLng),
-        zoom: 15,
+        zoom: 16,
         mapTypeId: google.maps.MapTypeId.SATELLITE,
 
       };
-      var map = new google.maps.Map(mapCanvas, mapOptions);
+      map = new google.maps.Map(mapCanvas, mapOptions);
+      map.setTilt(50);
       var marker = new google.maps.Marker({
         position: myLatLng,
         map: map,
-        title: "Hello World!",
+        title: "Downtown!",
       });
     }
     google.maps.event.addDomListener(window, "load", initialize);
@@ -51,9 +77,7 @@
   <div class="bg-dark title-div">
     <h1 class="fs-4 text-light bg-dark">Book</h1>
   </div>
-  <nav
-  class="navbar navbar-light navbar-expand-md bg-warning navbar-fixed-top navigation-clean-button"
-  style="
+  <nav class="navbar navbar-light navbar-expand-md bg-warning navbar-fixed-top navigation-clean-button" style="
     background: rgb(34, 34, 34);
     border-radius: 20;
     border-top-left-radius: 20;
@@ -63,78 +87,41 @@
     border-style: none;
     padding-top: 0; 
     padding-bottom: 10px;
-  "
->
-  <div class="container">
-    <button
-      data-bs-toggle="collapse"
-      class="navbar-toggler"
-      data-bs-target="#navcol-1"
-    >
-      <span class="visually-hidden">Toggle navigation</span
-      ><span class="navbar-toggler-icon"></span>
-    </button>
-    <div>
-      <a class="navbar-brand" href="index.html"
-        ><span
-          ><img width="100px" height="100px" src="/assets/img/logo.png"
-        /></span>
-      </a>
+  ">
+    <div class="container">
+      <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1">
+        <span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
+      </button>
+      <div>
+        <a class="navbar-brand" href="index.html"><span><img width="100px" height="100px"
+              src="/assets/img/logo.png" /></span>
+        </a>
+      </div>
+      <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(72, 72, 72)">
+        <ul class="navbar-nav nav-right">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html" style="color: rgba(57, 53, 53, 0.9)">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="viewEvents.html" style="color: rgba(57, 53, 53, 0.9)">View Events</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="calendar.html" style="color: rgba(57, 53, 53, 0.9)">Calendar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Notification.html" style="color: rgba(57, 53, 53, 0.9)">Notification</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="yourEvents.html" style="color: rgba(57, 53, 53, 0.9)">Your event</a>
+          </li>
+        </ul>
+        <p class="ms-auto navbar-text actions">
+          <a href="login.html" class="btn btn" role="button">Log In</a>
+          <a href="signup.html" class="btn btn-light" role="button">Sign Up</a>
+        </p>
+      </div>
     </div>
-    <div
-      class="collapse navbar-collapse"
-      id="navcol-1"
-      style="color: rgb(72, 72, 72)"
-    >
-      <ul class="navbar-nav nav-right">
-        <li class="nav-item">
-          <a
-            class="nav-link active"
-            href="index.html"
-            style="color: rgba(57, 53, 53, 0.9)"
-            >Home</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            href="viewEvents.html"
-            style="color: rgba(57, 53, 53, 0.9)"
-            >View Events</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            href="calendar.html"
-            style="color: rgba(57, 53, 53, 0.9)"
-            >Calendar</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            href="Notification.html"
-            style="color: rgba(57, 53, 53, 0.9)"
-            >Notification</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            href="yourEvents.html"
-            style="color: rgba(57, 53, 53, 0.9)"
-            >Your event</a
-          >
-        </li>
-      </ul>
-      <p class="ms-auto navbar-text actions">
-        <a href="login.html" class="btn btn" role="button">Log In</a>
-        <a href="signup.html" class="btn btn-light" role="button">Sign Up</a>
-      </p>
-    </div>
-  </div>
-</nav>
+  </nav>
   <div class="container py-4 py-xl-5">
     <div class="row mb-5">
       <div class="col-md-8 col-xl-6 text-center mx-auto">
