--- a/book.html
+++ b/book.html
@@ -1,169 +1,273 @@
 <!DOCTYPE html>
 <html class="text-dark" lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-  <title>Book</title>
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap1.min.css" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Roboto:300,400,700" />
-  <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
-  <link rel="stylesheet" href="assets/css/Black-Navbar.css" />
-  <link rel="stylesheet" href="assets/css/Dark-NavBar-Navigation-with-Button.css" />
-  <link rel="stylesheet" href="assets/css/Dark-NavBar-Navigation-with-Search.css" />
-  <link rel="stylesheet" href="assets/css/Dark-NavBar.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css" />
-  <link rel="stylesheet" href="assets/css/icon-star-full.css" />
-  <link rel="stylesheet" href="assets/css/Section-Title.css" />
-  <link rel="stylesheet" href="assets/css/styles.css" />
-  <style>
-    #map {
-      width: 500px;
-      height: 400px;
-    }
-  </style>
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWfu-lO-y3oA2wKN-3-677DEmCStsUipU"></script>
-  <script>
-    let map;
-
-    const iconBase = "/assets/img/";
-    const icons = {
-      poi: {
-        icon: "https://developers.google.com/maps/documentation/javascript/examples/full/images/info-i_maps.png"
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
+    <title>Book</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap1.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Roboto:300,400,700"
+    />
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
+    <link rel="stylesheet" href="assets/css/Black-Navbar.css" />
+    <link
+      rel="stylesheet"
+      href="assets/css/Dark-NavBar-Navigation-with-Button.css"
+    />
+    <link
+      rel="stylesheet"
+      href="assets/css/Dark-NavBar-Navigation-with-Search.css"
+    />
+    <link rel="stylesheet" href="assets/css/Dark-NavBar.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css"
+    />
+    <link rel="stylesheet" href="assets/css/icon-star-full.css" />
+    <link rel="stylesheet" href="assets/css/Section-Title.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <style>
+      #map {
+        width: 500px;
+        height: 400px;
       }
-    }
-    const features = [
-      {
-        position: new google.maps.LatLng(51.0478498, -114.0702133),
-        type: "poi"
-      }
-    ]
-    //create markers
-    for (let i = 0; i < features.length; i++) {
-      const marker = new google.maps.Marker({
-        position: features[i].position,
-        icon: icons[features[i].type].icon,
-        map: map,
-      });
-    }
+    </style>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWfu-lO-y3oA2wKN-3-677DEmCStsUipU"></script>
+    <script>
+      let map;
 
-
-    function initialize() {
-      var mapCanvas = document.getElementById("map");
-      //51.0489141,-114.0680675
-      var myLatLng = { lat: 51.0548432, lng: -114.0701675 };
-      var mapOptions = {
-        center: new google.maps.LatLng(myLatLng),
-        zoom: 16,
-        mapTypeId: google.maps.MapTypeId.SATELLITE,
-
+      const iconBase = "/assets/img/";
+      const icons = {
+        poi: {
+          icon: "https://developers.google.com/maps/documentation/javascript/examples/full/images/info-i_maps.png",
+        },
       };
-      map = new google.maps.Map(mapCanvas, mapOptions);
-      map.setTilt(50);
-      var marker = new google.maps.Marker({
-        position: myLatLng,
-        map: map,
-        title: "Downtown!",
-      });
-    }
-    google.maps.event.addDomListener(window, "load", initialize);
-  </script>
-</head>
+      const features = [
+        {
+          position: new google.maps.LatLng(51.0478498, -114.0702133),
+          type: "poi",
+        },
+      ];
+      //create markers
+      for (let i = 0; i < features.length; i++) {
+        const marker = new google.maps.Marker({
+          position: features[i].position,
+          icon: icons[features[i].type].icon,
+          map: map,
+        });
+      }
 
-<body class="bg-dark">
-  <div class="bg-dark title-div">
-    <h1 class="fs-4 text-light bg-dark">Book</h1>
-  </div>
-  <nav class="navbar navbar-light navbar-expand-md bg-warning navbar-fixed-top navigation-clean-button" style="
-    background: rgb(34, 34, 34);
-    border-radius: 20;
-    border-top-left-radius: 20;
-    border-top-right-radius: 20;
-    border-bottom-right-radius: 20;
-    border-bottom-left-radius: 20;
-    border-style: none;
-    padding-top: 0; 
-    padding-bottom: 10px;
-  ">
-    <div class="container">
-      <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1">
-        <span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
-      </button>
-      <div>
-        <a class="navbar-brand" href="index.html"><span><img width="100px" height="100px"
-              src="/assets/img/logo.png" /></span>
-        </a>
-      </div>
-      <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(72, 72, 72)">
-        <ul class="navbar-nav nav-right">
-          <li class="nav-item">
-            <a class="nav-link active" href="index.html" style="color: rgba(57, 53, 53, 0.9)">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="viewEvents.html" style="color: rgba(57, 53, 53, 0.9)">View Events</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="calendar.html" style="color: rgba(57, 53, 53, 0.9)">Calendar</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Notification.html" style="color: rgba(57, 53, 53, 0.9)">Notification</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="yourEvents.html" style="color: rgba(57, 53, 53, 0.9)">Your event</a>
-          </li>
-        </ul>
-        <p class="ms-auto navbar-text actions">
-          <a href="login.html" class="btn btn" role="button">Log In</a>
-          <a href="signup.html" class="btn btn-light" role="button">Sign Up</a>
-        </p>
-      </div>
+      function initialize() {
+        //let collisionBehavior = google.maps.CollisionBehavior.REQUIRED;
+        var mapCanvas = document.getElementById("map");
+        //51.0489141,-114.0680675
+        var myLatLng = { lat: 51.0548431, lng: -114.070161 };
+        var myLatLng2 = { lat: 51.054843, lng: -114.070167 };
+        var mapOptions = {
+          center: new google.maps.LatLng(myLatLng),
+          zoom: 16,
+          mapTypeId: google.maps.MapTypeId.TERRAIN,
+        };
+        map = new google.maps.Map(mapCanvas, mapOptions);
+
+        var marker = new google.maps.Marker(
+          {
+            position: myLatLng,
+            map: map,
+            title: "Event1!",
+          },
+          {
+            position: myLatLng2,
+            map: map,
+            title: "Event2!",
+          }
+        );
+        //  var marker2 = new google.maps.Marker();
+      }
+      google.maps.event.addDomListener(window, "load", initialize);
+    </script>
+    <script>
+      function copyClip() {
+        /* Get the text field */
+        var text = document.getElementById("shareLink");
+
+        /* Select the text field */
+        text.select();
+
+        /* Copy the text inside the text field */
+        navigator.clipboard.writeText(text.value);
+
+        /* Alert the copied text */
+        alert("Copied the text: " + text.value);
+      }
+    </script>
+  </head>
+
+  <body class="bg-dark">
+    <div class="bg-dark title-div">
+      <h1 class="fs-4 text-light bg-dark">Book</h1>
     </div>
-  </nav>
-  <div class="container py-4 py-xl-5">
-    <div class="row mb-5">
-      <div class="col-md-8 col-xl-6 text-center mx-auto">
-        <h2>
-          <span style="color: rgb(255, 255, 255)">Book the Main Event</span>
-        </h2>
-        <p class="w-lg-50">
-          <span style="color: rgb(255, 255, 255)">Curae hendrerit donec commodo hendrerit egestas tempus, turpis
-            facilisis nostra nunc. Vestibulum dui eget ultrices.</span>
-        </p>
+    <nav
+      class="navbar navbar-light navbar-expand-md bg-warning navbar-fixed-top navigation-clean-button"
+      style="
+        background: rgb(34, 34, 34);
+        border-radius: 20;
+        border-top-left-radius: 20;
+        border-top-right-radius: 20;
+        border-bottom-right-radius: 20;
+        border-bottom-left-radius: 20;
+        border-style: none;
+        padding-top: 0;
+        padding-bottom: 10px;
+      "
+    >
+      <div class="container">
+        <button
+          data-bs-toggle="collapse"
+          class="navbar-toggler"
+          data-bs-target="#navcol-1"
+        >
+          <span class="visually-hidden">Toggle navigation</span
+          ><span class="navbar-toggler-icon"></span>
+        </button>
+        <div>
+          <a class="navbar-brand" href="index.html"
+            ><span
+              ><img width="100px" height="100px" src="/assets/img/logo.png"
+            /></span>
+          </a>
+        </div>
+        <div
+          class="collapse navbar-collapse"
+          id="navcol-1"
+          style="color: rgb(72, 72, 72)"
+        >
+          <ul class="navbar-nav nav-right">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                href="index.html"
+                style="color: rgba(57, 53, 53, 0.9)"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="viewEvents.html"
+                style="color: rgba(57, 53, 53, 0.9)"
+                >View Events</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="calendar.html"
+                style="color: rgba(57, 53, 53, 0.9)"
+                >Calendar</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="Notification.html"
+                style="color: rgba(57, 53, 53, 0.9)"
+                >Notification</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="yourEvents.html"
+                style="color: rgba(57, 53, 53, 0.9)"
+                >Your event</a
+              >
+            </li>
+          </ul>
+          <p class="ms-auto navbar-text actions">
+            <a href="login.html" class="btn btn" role="button">Log In</a>
+            <a href="signup.html" class="btn btn-light" role="button"
+              >Sign Up</a
+            >
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
-      <div class="col" id="map"></div>
-      <div class="col">
-        <form>
-          <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label" style="color: rgba(224, 217, 217, 0.9)">Email
-              address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
-            <div id="emailHelp" class="form-text">
-              We'll never share your email with anyone else.
+    </nav>
+    <div class="container py-4 py-xl-5">
+      <div class="row mb-5">
+        <div class="col-md-8 col-xl-6 text-center mx-auto">
+          <h2>
+            <span style="color: rgb(255, 255, 255)">Book the Main Event</span>
+          </h2>
+          <p class="w-lg-50">
+            <span style="color: rgb(255, 255, 255)"
+              >Curae hendrerit donec commodo hendrerit egestas tempus, turpis
+              facilisis nostra nunc. Vestibulum dui eget ultrices.</span
+            >
+          </p>
+        </div>
+      </div>
+      <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
+        <div class="col" id="map"></div>
+        <div class="col">
+          <form>
+            <div class="mb-3">
+              <label
+                for="exampleInputEmail1"
+                class="form-label"
+                style="color: rgba(224, 217, 217, 0.9)"
+                >Shareable Link</label
+              >
+              <input
+                type="email"
+                class="form-control"
+                id="shareLink"
+                disabled
+                value="http://themainevent.com/event/1jbx6a"
+                aria-describedby="shareHelp"
+              />
+              <button
+                onclick="copyClip()"
+                class="btn btn-primary"
+                type="button"
+              >
+                Copy
+              </button>
             </div>
-          </div>
-          <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label"
-              style="color: rgba(224, 217, 217, 0.9)">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" />
-          </div>
-          <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-            <label class="form-check-label" for="exampleCheck1" style="color: rgba(224, 217, 217, 0.9)">Subscribe to
-              similar events</label>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+
+            <div class="mb-3 form-check">
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="exampleCheck1"
+              />
+              <label
+                class="form-check-label"
+                for="exampleCheck1"
+                style="color: rgba(224, 217, 217, 0.9)"
+                >Subscribe to similar events</label
+              >
+            </div>
+            <div class="d-grid gap-2 col-6 mx-auto">
+              <a class="btn btn-primary" type="submit" href="yourEvents.html">
+                Save the event
+              </a>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
-  <script src="assets/bootstrap/js/bootstrap1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js"></script>
-  <script src="assets/js/Lightbox-Gallery.js"></script>
-</body>
-
+    <script src="assets/bootstrap/js/bootstrap1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js"></script>
+    <script src="assets/js/Lightbox-Gallery.js"></script>
+  </body>
 </html>
